hphp/hack/test/requireclass/typing/requireclass_conflict_02.bad.php.exp
File "requireclass_conflict_02.bad.php", line 10, characters 3-20:
Conflicting requirements for `C` (Parsing[1002])
File "requireclass_conflict_02.bad.php", line 10, characters 19-19:
`C` is a `final` class, so it cannot be extended. (NastCheck[3072])
File "requireclass_conflict_02.bad.php", line 8, characters 7-7:
This trait defines incompatible requirements. (Typing[4111])
  File "requireclass_conflict_02.bad.php", line 9, characters 17-17:
  This requires exactly class C
  File "requireclass_conflict_02.bad.php", line 10, characters 19-19:
  This requires a subtype of class C
